EDAProject_New/force-app/main/default/objects/User/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <label>Military Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Student_Affiliation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Sea Student (Navy, USMC, Coast Guard)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>