EDAProject_New/force-app/main/default/objects/User/fields/NDU_College__c.field-meta.xml
<CustomField>
    <fullName>NDU_College__c</fullName>
    <label>NDU College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College of Information and Cyberspace</fullName>
            </value>
            <value>
                <fullName>College of International Security Affairs</fullName>
            </value>
            <value>
                <fullName>Dwight D. Eisenhower School for National Security and Resource Strategy</fullName>
            </value>
            <value>
                <fullName>Joint Forces Staff College</fullName>
            </value>
            <value>
                <fullName>National War College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>