EDAProject_New/force-app/main/default/objects/User/fields/NDU_Program__c.field-meta.xml
<CustomField>
    <fullName>NDU_Program__c</fullName>
    <label>NDU Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NDU_College__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master of Science in Government Information Leadership</fullName>
            </value>
            <value>
                <fullName>NDU CIC Certificate</fullName>
            </value>
            <value>
                <fullName>Master of Arts Degree in Strategic Security Studies</fullName>
            </value>
            <value>
                <fullName>Regional Defense Fellowship (RDF) Program</fullName>
            </value>
            <value>
                <fullName>South and Central Asia Program (SCAP)</fullName>
            </value>
            <value>
                <fullName>Joint Special Operations Master of Arts (JSOMA) Program</fullName>
            </value>
            <value>
                <fullName>Joint Advanced Warfighting Schools (JAWS)</fullName>
            </value>
            <value>
                <fullName>Joint and Combined Warfighting School (JCWS) – Resident and Satellite</fullName>
            </value>
            <value>
                <fullName>Joint and Combined Warfighting School (JCWS) – Hybrid</fullName>
            </value>
            <value>
                <fullName>Joint Professional Military Education (JPME) Masters Program</fullName>
            </value>
            <value>
                <fullName>Countering Weapons of Mass Destruction (CWMD) Graduate Fellowship Program</fullName>
            </value>
            <value>
                <fullName>Graduate Certificate in WMD Studies</fullName>
            </value>
            <value>
                <fullName>Master of Science in WMD Studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>