EDAProject_New/force-app/main/default/objects/User/fields/Profile_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Updated?</label>
    <type>Checkbox</type>
</CustomField>