EDAProject_New/force-app/main/default/objects/User/fields/Student_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Student_Affiliation__c</fullName>
    <label>Student Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civilian</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>